--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -3,8 +3,8 @@ header img,
 .site-header img,
 .navbar img,
 .header-logo img {
-  height: 48px;          /* 👈 change this */
-  max-height: 48px;
+  height: 80 px;          /* 👈 change this */
+  max-height: 80px;
   width: auto;
 }
 
@@ -12,5 +12,5 @@ header img,
 header,
 .site-header,
 .navbar {
-  background-color: #0f172a; /* 👈 your colour */
+  background-color: #2c2d30; /* 👈 your colour */
 }
