Tried to update logo size

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -221,13 +221,13 @@
     {{ end }}
 
     .header__logo img {
-      height: 100px;
-      width: auto;
+      height: auto;
+      width: 320px;
     }
 
     .header__logo--small img {
       height: auto;
-      width: 160px;
+      width: 320px;
     }
 
     .header--large { padding: 16px; }
