--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -204,7 +204,7 @@
      */
 
     .header {
-      padding: 8px 0;
+      padding: 16px 0 4px 0;
       background: {{ .Site.Params.brand }};
     }
 
