--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -214,6 +214,12 @@
       font-variant: small-caps;
     }
 
+    .header__logo {
+      display: inline-block;
+      padding-top: 32px;
+      padding-bottom: 4px;
+    }
+
     {{ if eq .Site.Params.headerTextColor "black" }}
       .header a h1 { color: #000; }
     {{ else if eq .Site.Params.headerTextColor "white" }}
