Test padding change

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -227,8 +227,10 @@
     {{ end }}
 
     .header__logo img {
+      display: block;
       height: auto;
       width: 320px;
+      margin-top: 80px;
     }
 
     .header__logo--small img {
