--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -217,7 +217,7 @@
     .header__logo {
       display: inline-block;
       padding-top: 80px;
-      padding-bottom: 16px;
+      padding-bottom: 0;
     }
 
     {{ if eq .Site.Params.headerTextColor "black" }}
