--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -231,6 +231,7 @@
       height: auto;
       width: 320px;
       margin-top: 80px;
+      margin-bottom: -24px;
     }
 
     .header__logo--small img {
