--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -204,7 +204,7 @@
      */
 
     .header {
-      padding: 16px 0 4px 0;
+      padding: 0;
       background: {{ .Site.Params.brand }};
     }
 
@@ -216,8 +216,7 @@
 
     .header__logo {
       display: inline-block;
-      padding-top: 16px;
-      padding-bottom: 0;
+      padding: 12px 0;
     }
 
     {{ if eq .Site.Params.headerTextColor "black" }}
@@ -230,8 +229,7 @@
       display: block;
       height: auto;
       width: 320px;
-      margin-top: 16px;
-      margin-bottom: -24px;
+      margin: 0;
     }
 
     .header__logo--small img {
